# Instagram-clone

./: .gitignore  Makefile  README.md  instagramclone.pem  pyproject.toml  pytest.ini  requirements.txt  todo.md
.github/workflows/: aws.yml
apps/: tasks.py  urls.py
apps/chat/: admin.py  models.py  serializers.py  urls.py  views.py
apps/chat/migrations/: 0001_initial.py
apps/content/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/content/migrations/: 0001_initial.py  0002_story_is_active.py  0003_remove_story_is_active_story_viewer_viewers_user.py  0004_alter_story_viewer.py
apps/notifications/: models.py  serializers.py  signals.py  urls.py  views.py
apps/shared/: models.py  permissions.py
apps/users/: admin.py  forms.py  models.py  oauth2.py  serializers.py  tasks.py  tests.py  token.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_userprofile_image.py  0003_alter_userprofile_image.py  0004_alter_userprofile_image.py  0005_alter_userprofile_image.py  0006_alter_userprofile_image.py  0007_userprofile_posts.py  0008_alter_userprofile_posts.py  0009_remove_userprofile_posts_userprofile_posts.py  0010_remove_userprofile_posts_userprofile_posts.py  0011_remove_userprofile_posts_userprofile_user_posts.py  0017_alter_userprofile_user_posts.py  (+11 more)
conf/: celery.py  settings.py  urls.py
media/posts/: video-output-2225312A-20AB-4227-86E2-21080CC86C87_vfJrwUm.mov
templates/: confirm_email.html  confirmation_sent.html  email_confirmation_message.html  email_template.html  register.html
